# PX4-gazebo-models

./: QUICK_COMMANDS.txt  TEXTURED_PERSONS.md  TEXTURED_SETUP_COMPLETE.md  check_gazebo.sh  control_target.py  spawn_person_simple.sh  spawn_textured_person.py
models/: setup_textured_persons.py  test_textured_setup.py
models/car/: README.md  model.sdf
models/m_casual_2/: m_casual_2.dae
models/m_casual_4/: run.dae  walk.dae
models/m_casual_mic/: model.config  model.sdf
models/m_gym/: run.dae  sit.dae  walk.dae
models/m_gym_2/: run.dae  talk.dae  walk.dae
models/m_simple_crude/: run.dae  sit.dae  talk.dae  walk.dae
models/person/: model.config  model.sdf
models/person_textured_female/: model.config  model.sdf
models/person_textured_male/: model.config  model.sdf
models/red_target/: model.config  model.sdf
models/w_blue_dress/: run.dae  sit.dae  walk.dae
models/x500_mono_cam/: model.sdf
plugins/car_control/: CMakeLists.txt  CarControlPlugin.cc  build.sh  car_cmd_pub.cc  car_teleport.cc
worlds/: default.sdf  forest.sdf  tracking_test.sdf
